[package]
name = "substr"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
# colored = "2.1.0"
derive_more = { version = "1.0.0", features = ["from"] }
# fst = { path = "../fst-0.4.7" }
# radix_trie = "0.2.1"
# scrde = { version = "1.0.210", features = ["derive"] }

[dependencies.serde]
version = "^1.0"
features = ["derive"]
optional = true

